--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         </p>
         <div class="row">
         <p id="random-number" class="display-4 col-sm-12 col-lg-2 p-2"></p>
-        <p id="score" class="col-lg-2 col-sm-12 mx-lg-2 pt-2">Wins:
+        <p id="score" class="col-lg-2 col-sm-12 mx-lg-2 pt-2">Wins:<span id="win"></span>
             <br>
-            Losses:
+            Losses:<span id="loss"></span>
         </p>
         </div>
         <div class="row mb-2">
-            <img src="assets/images/firstcrys.jpg" class="m-1 img-fluid rounded">
-            <img src="assets/images/fifthcrys.jpg" class="m-1 img-fluid rounded">
-            <img src="assets/images/secondcrys.jpg" class="m-1 img-fluid rounded">
-            <img src="assets/images/sixthcrys.jpg" class="m-1 img-fluid rounded">
+            <img id="num-1" src="assets/images/firstcrys.jpg" class="crystals m-1 img-fluid rounded">
+            <img id="num-2" src="assets/images/fifthcrys.jpg" class="crystals m-1 img-fluid rounded">
+            <img id="num-3" src="assets/images/secondcrys.jpg" class="crystals m-1 img-fluid rounded">
+            <img id="num-4" src="assets/images/sixthcrys.jpg" class="crystals m-1 img-fluid rounded">
         </div>
         <div class="row">
-        <h6 class="col-lg-2 col-sm-12 p-2">Your total is:</h6>
+        <h6 class="col-lg-2 col-sm-12 p-2">Your total is:<span id="user-total"></span></h6>
         </div>
         <div class="row">
             <p id="user-number" class="display-4 col-lg-2 col-sm-12 p-2"></p>
@@ -47,7 +47,9 @@
     
 
     </main>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
