filled out readme, added alt attributes

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </p>
         </div>
         <div class="row mb-2">
-            <img id="num-1" src="assets/images/firstcrys.jpg" class="crystals m-1 img-fluid rounded">
-            <img id="num-2" src="assets/images/fifthcrys.jpg" class="crystals m-1 img-fluid rounded">
-            <img id="num-3" src="assets/images/secondcrys.jpg" class="crystals m-1 img-fluid rounded">
-            <img id="num-4" src="assets/images/sixthcrys.jpg" class="crystals m-1 img-fluid rounded">
+            <img id="num-1" src="assets/images/firstcrys.jpg" class="crystals m-1 img-fluid rounded" alt="first crystal">
+            <img id="num-2" src="assets/images/fifthcrys.jpg" class="crystals m-1 img-fluid rounded" alt="second crystal">
+            <img id="num-3" src="assets/images/secondcrys.jpg" class="crystals m-1 img-fluid rounded" alt="third crystal">
+            <img id="num-4" src="assets/images/sixthcrys.jpg" class="crystals m-1 img-fluid rounded" alt="fourth crystal">
         </div>
         <div class="row">
         <h6 class="col-lg-2 col-sm-12 p-2">Your total is:<span id="user-total"></span></h6>
